--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "example-map-react-leaflet",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://hanneolsen.github.io/example-map-react-leaflet",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -11,6 +12,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.8",
+    "gh-pages": "^3.1.0",
     "leaflet": "^1.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -20,6 +22,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
